# paralelo-backend-crud

./: .env  .env.example  Cargo.toml  README.md
src/: auth.rs  config.rs  db.rs  handlers.rs  main.rs  models.rs  token.rs
